# F1Dashboard

./: .gitignore  CLAUDE.md  brief.md  model_calibration_strategy.html  model_spec.md  model_v1_complete.html  pyproject.toml  ruff.toml
.github/workflows/: benchmark.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/design_reference/design_handoff_f1_cockpit/: README.md
.planning/phases/01-foundation-data-pipeline-module-contracts/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-physics-model-modules-a-g/: 02-01-infrastructure-and-contracts-PLAN.md  02-01-infrastructure-and-contracts-SUMMARY.md  02-02-module-a-kinematics-PLAN.md  02-02-module-a-kinematics-SUMMARY.md  02-03-modules-b-c-loads-forces-PLAN.md  02-03-modules-b-c-loads-forces-SUMMARY.md  02-04-modules-d-e-friction-slip-PLAN.md  02-CONTEXT.md  02-HUMAN-UAT.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/tests/: export.spec.ts  hash.spec.ts  keyboard.spec.ts  tire-copy.spec.ts  upload.spec.ts
scripts/: __init__.py  build_canonical_fixture.py  build_corrupted_fixture.py  fetch.py
(+151 files in other folders)
