[project]
name = "f1-dashboard-root"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/core", "packages/api", "packages/calibration"]

[tool.uv.sources]
f1-core = { workspace = true }
f1-api = { workspace = true }
f1-calibration = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-benchmark>=5.2,<6",
    "hypothesis>=6,<7",
    "ruff>=0.7",
    "pyright>=1.1",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/api/tests", "packages/calibration/tests"]
python_files = ["test_*.py"]
# --import-mode=importlib avoids duplicate module-name collisions between
# packages/core/tests/conftest.py and packages/api/tests/conftest.py
# (both folders are named "tests"). See Rule 3 fix in plan 01-05.
addopts = "-ra --import-mode=importlib"
markers = [
    "integration: marks slow integration tests requiring full MCMC (deselect with '-m \"not integration\"')",
]

[tool.pyright]
include = ["packages/core/src", "packages/api/src"]
pythonVersion = "3.12"
strict = ["packages/core/src/f1_core/contracts.py"]
